manifests/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtualservice
  namespace: online-boutique
spec:
  hosts:
  - "*"
  gateways:
  - boutique-gateway
  http:
  - name: primary
    route:
    - destination:
        host: frontend
        port:
          number: 80
      weight: 100
    - destination:
        host: frontend-canary
        port:
          number: 80
      weight: 0
